fix display on small screen

--- a/src/web/App.scss
+++ b/src/web/App.scss
@@ -19,7 +19,6 @@
     display: flex;
     align-items: stretch;
     background-color: var(--theme-background-header);
-    flex-flow: row wrap;
     height: 100%;
   }
 
