--- a/src/web/screens/dashboard.scss
+++ b/src/web/screens/dashboard.scss
@@ -1,7 +1,5 @@
 .dashboard-content {
   padding: 3rem;
-  box-sizing: border-box;
-  max-width: calc(100% - 250px);
   flex-grow: 1;
   background-color: var(--theme-background-content);
 }
